--- a/src/index.template.html
+++ b/src/index.template.html
@@ -399,7 +399,7 @@
                   <!-- Slide 1 -->
                   <div class="cslider-slide">
                     <a href="new-arrivals.html">
-                      <img src="images/6.webp" alt="New Arrivals Collection">
+                      <img src="images/s1.webp" alt="New Arrivals Collection">
                       <div class="cslider-hover-text" aria-hidden="true">
                         <span class="cslider-view">VIEW</span>
                         <span class="cslider-products">12 products</span>
@@ -410,7 +410,7 @@
                   <!-- Slide 2 -->
                   <div class="cslider-slide">
                     <a href="skincare-rituals.html">
-                      <img src="images/7.webp" alt="Ancestral Skincare & Body Rituals Collection">
+                      <img src="images/s2.webp" alt="Ancestral Skincare & Body Rituals Collection">
                       <div class="cslider-hover-text" aria-hidden="true">
                         <span class="cslider-view">VIEW</span>
                         <span class="cslider-products">2 products</span>
@@ -421,7 +421,7 @@
                   <!-- Slide 3 -->
                   <div class="cslider-slide">
                     <a href="grounding.html">
-                      <img src="images/8.webp" alt="Grounding & Earthing Essentials Collection">
+                      <img src="images/s3.webp" alt="Grounding & Earthing Essentials Collection">
                       <div class="cslider-hover-text" aria-hidden="true">
                         <span class="cslider-view">VIEW</span>
                         <span class="cslider-products">3 products</span>
@@ -432,7 +432,7 @@
                   <!-- Slide 4 -->
                   <div class="cslider-slide">
                     <a href="energy-fuel.html">
-                      <img src="images/11.webp" alt="Sovereign Energy & Inner Fuel Collection">
+                      <img src="images/s4.webp" alt="Sovereign Energy & Inner Fuel Collection">
                       <div class="cslider-hover-text" aria-hidden="true">
                         <span class="cslider-view">VIEW</span>
                         <span class="cslider-products">1 products</span>
@@ -443,7 +443,7 @@
                   <!-- Slide 5 -->
                   <div class="cslider-slide">
                     <a href="emf-defence.html">
-                      <img src="images/9.webp" alt="EMF & Light Defense Gear Collection">
+                      <img src="images/s5.webp" alt="EMF & Light Defense Gear Collection">
                       <div class="cslider-hover-text" aria-hidden="true">
                         <span class="cslider-view">VIEW</span>
                         <span class="cslider-products">4 products</span>
@@ -454,7 +454,7 @@
                   <!-- Slide 6 -->
                   <div class="cslider-slide">
                     <a href="frequency-tools.html">
-                      <img src="images/10.webp" alt="Frequency Tools & Resonance Devices Collection">
+                      <img src="images/s6.webp" alt="Frequency Tools & Resonance Devices Collection">
                       <div class="cslider-hover-text" aria-hidden="true">
                         <span class="cslider-view">VIEW</span>
                         <span class="cslider-products">5 products</span>
