--- a/src/index.template.html
+++ b/src/index.template.html
@@ -186,7 +186,7 @@
 
 <div class="divider"></div>
 
-<script src="multi-slider.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
 
@@ -338,7 +338,15 @@
   </section>
 
      <div class="divider"></div>
-     
+     <div class="divider"></div>
+
+ 
+     <div class="container">
+      <div id="image-grid-placeholder"></div>
+      </div>
+
+
+        <div class="divider"></div>
         
 
         <div class="custom-slider-wrapper" aria-label="Image Slider">
@@ -467,19 +475,9 @@
 
         <div class="divider"></div>
 
-        <script src="multi-slider.js"></script>
+        <script src="main.js"></script>
         </body>
         </html>
-
-        <div class="divider"></div>
-
-        <div class="divider"></div>
-
- 
-     <div class="container">
-      <div id="image-grid-placeholder"></div>
-      </div>
-
 
         <div class="divider"></div>
    
