--- a/src/new-arrivals.template.html
+++ b/src/new-arrivals.template.html
@@ -254,6 +254,11 @@
                
 
         <div class="divider"></div>
+
+        <div class="container">
+      <div id="image-grid-placeholder"></div>
+      </div>
+   <div class="divider"></div>
    
       <!-- Footer -->
     <footer id="footer">
