--- a/src/new-arrivals.template.html
+++ b/src/new-arrivals.template.html
@@ -251,124 +251,8 @@
 /*]]>*/
 </script>
 
-               
+      <div class="slider-placeholder"></div>
 
-        
-
-        <div class="container">
-      <div id="image-grid-placeholder"></div>
-      </div>
-
-      <!DOCTYPE html>
-        <html lang="en">
-        <head>
-          <meta charset="UTF-8" />
-          <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-          <title>Conflict-Free Slider with Progress Bar and Arrows</title>
-        </head>
-        <body>
-
-        <!-- Slider Instance -->
-        <div class="cslider-container">
-          <div class="cslider-slider-wrapper">
-            <div class="cslider-slider-container">
-
-              <!-- Navigation Arrows -->
-              <div class="cslider-controls">
-                <button class="cslider-arrow left" aria-label="Previous Slide">
-                  <img src="images/left-arrow.svg" alt="Previous">
-                </button>
-                <button class="cslider-arrow right" aria-label="Next Slide">
-                  <img src="images/right-arrow.svg" alt="Next">
-                </button>
-              </div>
-
-              <!-- Slider Content -->
-              <div class="cslider-slider">
-                <div class="cslider-slides">
-
-                  <!-- Slide 1 -->
-                  <div class="cslider-slide">
-                    <a href="new-arrivals.html">
-                      <img src="images/s1.webp" alt="New Arrivals Collection">
-                      <div class="cslider-hover-text" aria-hidden="true">
-                        <span class="cslider-view">VIEW</span>
-                        <span class="cslider-products">12 products</span>
-                      </div>
-                    </a>
-                  </div>
-
-                  <!-- Slide 2 -->
-                  <div class="cslider-slide">
-                    <a href="skincare-rituals.html">
-                      <img src="images/s2.webp" alt="Ancestral Skincare & Body Rituals Collection">
-                      <div class="cslider-hover-text" aria-hidden="true">
-                        <span class="cslider-view">VIEW</span>
-                        <span class="cslider-products">2 products</span>
-                      </div>
-                    </a>
-                  </div>
-
-                  <!-- Slide 3 -->
-                  <div class="cslider-slide">
-                    <a href="grounding.html">
-                      <img src="images/s7.webp" alt="Grounding & Earthing Essentials Collection">
-                      <div class="cslider-hover-text" aria-hidden="true">
-                        <span class="cslider-view">VIEW</span>
-                        <span class="cslider-products">3 products</span>
-                      </div>
-                    </a>
-                  </div>
-
-                  <!-- Slide 4 -->
-                  <div class="cslider-slide">
-                    <a href="energy-fuel.html">
-                      <img src="images/s4.webp" alt="Sovereign Energy & Inner Fuel Collection">
-                      <div class="cslider-hover-text" aria-hidden="true">
-                        <span class="cslider-view">VIEW</span>
-                        <span class="cslider-products">1 products</span>
-                      </div>
-                    </a>
-                  </div>
-
-                  <!-- Slide 5 -->
-                  <div class="cslider-slide">
-                    <a href="emf-defence.html">
-                      <img src="images/s5.webp" alt="EMF & Light Defense Gear Collection">
-                      <div class="cslider-hover-text" aria-hidden="true">
-                        <span class="cslider-view">VIEW</span>
-                        <span class="cslider-products">4 products</span>
-                      </div>
-                    </a>
-                  </div>
-
-                  <!-- Slide 6 -->
-                  <div class="cslider-slide">
-                    <a href="frequency-tools.html">
-                      <img src="images/s6.webp" alt="Frequency Tools & Resonance Devices Collection">
-                      <div class="cslider-hover-text" aria-hidden="true">
-                        <span class="cslider-view">VIEW</span>
-                        <span class="cslider-products">5 products</span>
-                      </div>
-                    </a>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-
-            <!-- Progress Bar -->
-            <div class="cslider-progress-container">
-              <div class="cslider-progress-bar"></div>
-            </div>
-          </div>
-        </div>
-
-        <div class="divider"></div>
-
-        <script src="main.js"></script>
-        </body>
-        </html>
    
 
       <!-- Footer -->
