--- a/src/new-arrivals.template.html
+++ b/src/new-arrivals.template.html
@@ -252,7 +252,7 @@
 </script>
 
       <div class="slider-placeholder"></div>
-      <div class="divider"></div>
+      <div class="divider-1"></div>
 
    
 
