--- a/src/skincare-rituals.template.html
+++ b/src/skincare-rituals.template.html
@@ -75,7 +75,7 @@
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div id='product-component-1748979199510'></div>
+            <div class="products-container"><div id='product-component-1748979199510'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
@@ -290,7 +290,7 @@
             <div id="image-grid-placeholder"></div>
             </div>
 
-        
+        </div>
 
                
 
