--- a/src/new-arrivals.template.html
+++ b/src/new-arrivals.template.html
@@ -74,7 +74,7 @@
             <div class="shop-divider"></div>
             <div class="products-container">
 
-      <div class="slider-placeholder"></div>
+      
       <div class="divider-1"></div>
 
       <div class="buy-button" data-id="15186144166262"></div>
@@ -258,7 +258,12 @@
 })();
 /*]]>*/
 </script>
+
+<div class="container">
+            <div id="image-grid-placeholder"></div>
+            </div>
 </div>
+<div class="slider-placeholder"></div>
 
 
    
