--- a/src/skincare-rituals.template.html
+++ b/src/skincare-rituals.template.html
@@ -290,7 +290,7 @@
             <div id="image-grid-placeholder"></div>
             </div>
 
-        
+        <div class="slider-placeholder"></div>
 
                
 
