--- a/src/new-arrivals.template.html
+++ b/src/new-arrivals.template.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod New Arrivals</title>
+    <title>4bidden wellness New Arrivals</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
