--- a/src/his-story.template.html
+++ b/src/his-story.template.html
@@ -169,6 +169,48 @@
 
 <div class="divider-1"></div>
 
+
+<div class="harmonized-container">
+  <!-- Featured Section -->
+  <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
+    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Products</h2>
+    <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Products</button>
+  </div>
+
+  <!-- Tiles Section -->
+  <section class="tiles" style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
+    <article class="style1" style="flex: 1 1 calc(33.333% - 20px);">
+      <span class="image">
+        <img src="images/p1.webp" alt="" />
+      </span>
+      <a href="forg3t.html">
+        <h2></h2>
+        <div class="content">
+          <h2>View</h2>
+        </div>
+      </a>
+    </article>
+    <article class="style2" style="flex: 1 1 calc(33.333% - 20px);">
+      <span class="image">
+        <img src="images/p2.webp" alt="" />
+      </span>
+      <a href="forg3t.html">
+        <h2></h2>
+        <div class="content">
+          <h2>View</h2>
+        </div>
+      </a>
+    </article>
+    <article class="style-text" style="flex: 1 1 calc(33.333% - 20px); display: flex; align-items: center; justify-content: center; background-color: #f4f4f4; padding: 20px; text-align: center;">
+      <div>
+        <h3 style="margin-bottom: 10px; font-size: 20px;">Our Craft</h3>
+        <p style="font-size: 16px; color: #333;">Each design is forged with intention, merging style and storytelling. Explore pieces that speak for themselves.</p>
+      </div>
+    </article>
+  </section>
+</div>
+
+
 <!-- First products here -->
 
 
