--- a/src/his-story.template.html
+++ b/src/his-story.template.html
@@ -91,8 +91,8 @@
 <div class="harmonized-container">
   <!-- Featured Section -->
   <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
-    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Products</h2>
-    <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Products</button>
+    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #000000;">Something here</h2>
+    <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">This Product</button>
   </div>
 
   <!-- Tiles Section -->
@@ -135,8 +135,8 @@
 <div class="harmonized-container">
   <!-- Featured Section -->
   <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
-    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Products</h2>
-    <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Products</button>
+    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #000000;">some description</h2>
+    <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">Buy Now (?)</button>
   </div>
 
   <!-- Tiles Section -->
@@ -154,7 +154,7 @@
       <a href="forg3t.html">
         <h2></h2>
         <div class="content">
-          <h2>View</h2>
+          <h2></h2>
         </div>
       </a>
     </article>
@@ -165,7 +165,7 @@
       <a href="forg3t.html">
         <h2></h2>
         <div class="content">
-          <h2>View</h2>
+          <h2>4bidden</h2>
         </div>
       </a>
     </article>
