--- a/src/his-story.template.html
+++ b/src/his-story.template.html
@@ -129,6 +129,7 @@
 </div>
 
 <div class="divider-1"></div>
+<div class="harmonized-container">
 <div id='product-component-1749076469621'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
@@ -335,6 +336,8 @@
 })();
 /*]]>*/
 </script>
+</div>
+
 <div class="divider-1"></div>
 
 
