--- a/src/his-story.template.html
+++ b/src/his-story.template.html
@@ -91,7 +91,7 @@
 <div class="harmonized-container">
   <!-- Featured Section -->
   <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
-    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #000000;">Something here</h2>
+    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #000000;">432Hz Cathedral Frequency Tuning Fork</h2>
     </div>
 
   <!-- Tiles Section -->
@@ -105,12 +105,6 @@
       <span class="image">
         <img src="images/p2.webp" alt="" />
       </span>
-      <a href="forg3t.html">
-        <h2></h2>
-        <div class="content">
-          <h2>View</h2>
-        </div>
-      </a>
     </article>
     <article class="style-text" style="flex: 1 1 calc(33.333% - 20px); display: flex; align-items: center; justify-content: center; background-color: #f4f4f4; padding: 20px; text-align: center;">
       <div>
@@ -337,8 +331,7 @@
 <div class="harmonized-container">
   <!-- Featured Section -->
   <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
-    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #000000;">some description</h2>
-    <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">Buy Now (?)</button>
+    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #000000;">432Hz Cathedral Frequency Tuning Fork</h2>
   </div>
 
   <!-- Tiles Section -->
@@ -353,23 +346,11 @@
       <span class="image">
         <img src="images/p1.webp" alt="" />
       </span>
-      <a href="forg3t.html">
-        <h2></h2>
-        <div class="content">
-          <h2></h2>
-        </div>
-      </a>
     </article>
     <article class="style2" style="flex: 1 1 calc(33.333% - 20px);">
       <span class="image">
         <img src="images/p2.webp" alt="" />
       </span>
-      <a href="forg3t.html">
-        <h2></h2>
-        <div class="content">
-          <h2>4bidden</h2>
-        </div>
-      </a>
     </article>
   </section>
 </div>
