--- a/src/index.template.html
+++ b/src/index.template.html
@@ -240,7 +240,7 @@
       <span class="image">
         <img src="images/p4.webp" alt="" />
       </span>
-      <a href="his-story.html">
+      <a href="blue-light-glasses.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
