--- a/src/index.template.html
+++ b/src/index.template.html
@@ -18,10 +18,9 @@
     </noscript>
   </head>
   <body class="is-preload">
-    <!-- Promo Banner -->
-    <div id="promo-banner">
-      <p>🎉 4biddenwellness work in progress right now! 🎉</p>
-    </div>
+    <!-- Promo Banner Placeholder -->
+<%= promoBanner %>
+
     <!-- Wrapper -->
     <div id="wrapper">
       <!-- Header -->
