--- a/src/promoBanner.html
+++ b/src/promoBanner.html
@@ -1,3 +1,3 @@
-<div style="background-color: yellow; color: black; text-align: center; padding: 8px;">
+<div>
   🚀 Free Shipping on all orders! 🚀
 </div>
