--- a/src/his-story.template.html
+++ b/src/his-story.template.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden wellness Blue Light Glasses</title>
+    <title>4bidden wellness PRODUCT PAGE TEMPLATE</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -18,10 +18,8 @@
     </noscript>
   </head>
   <body class="is-preload">
-    <!-- Promo Banner -->
-    <div id="promo-banner">
-      <p>🎉 Free delivery on orders over $100! 🎉</p>
-    </div>
+     <!-- Promo Banner Placeholder -->
+<%= promoBanner %>
     <!-- Wrapper -->
     <div id="wrapper">
       <!-- Header -->
