--- a/src/skincare-rituals.template.html
+++ b/src/skincare-rituals.template.html
@@ -18,10 +18,8 @@
     </noscript>
   </head>
   <body class="is-preload">
-    <!-- Promo Banner -->
-    <div id="promo-banner">
-      <p>🎉 Free delivery on orders over $100! 🎉</p>
-    </div>
+     <!-- Promo Banner Placeholder -->
+<%= promoBanner %>
     <!-- Wrapper -->
     <div id="wrapper">
       <!-- Header -->
