--- a/src/index.template.html
+++ b/src/index.template.html
@@ -228,7 +228,7 @@
       <span class="image">
         <img src="images/p3.webp" alt="" />
       </span>
-      <a href="his-story.html">
+      <a href="woodsleep.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
