--- a/src/index.template.html
+++ b/src/index.template.html
@@ -217,7 +217,7 @@
       <span class="image">
         <img src="images/p2.webp" alt="" />
       </span>
-      <a href="forg3t.html">
+      <a href="tallow-honey.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
