--- a/src/index.template.html
+++ b/src/index.template.html
@@ -272,7 +272,7 @@
       <span class="image">
         <img src="images/p7.webp" alt="" />
       </span>
-      <a href="propaganda-missile.html">
+      <a href="black-tourmaline.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
