--- a/src/index.template.html
+++ b/src/index.template.html
@@ -206,7 +206,7 @@
       <span class="image">
         <img src="images/p1.webp" alt="" />
       </span>
-      <a href="forg3t.html">
+      <a href="shilajit.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
@@ -250,7 +250,7 @@
       <span class="image">
         <img src="images/p5.webp" alt="" />
       </span>
-      <a href="indoctrination.html">
+      <a href="grounding-mat.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
@@ -261,7 +261,7 @@
       <span class="image">
         <img src="images/p6.webp" alt="" />
       </span>
-      <a href="indoctrination.html">
+      <a href="tuning-fork.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
@@ -305,7 +305,7 @@
       <span class="image">
         <img src="images/p10.webp" alt="" />
       </span>
-      <a href="design-4biddenprod-nada.html">
+      <a href="mwo.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
@@ -316,7 +316,7 @@
       <span class="image">
         <img src="images/p11.webp" alt="" />
       </span>
-      <a href="they-lie-vision.html">
+      <a href="groundin-bed.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
