--- a/src/index.template.html
+++ b/src/index.template.html
@@ -316,7 +316,7 @@
       <span class="image">
         <img src="images/p11.webp" alt="" />
       </span>
-      <a href="groundin-bed.html">
+      <a href="grounding-bed.html">
         <h2></h2>
         <div class="content">
           <h2>View</h2>
