--- a/src/grounding-shoes.template.html
+++ b/src/grounding-shoes.template.html
@@ -356,7 +356,7 @@
                   </article>
                   <article class="style1" style="flex: 1 1 calc(33.333% - 20px);">
                     <span class="image">
-                      <img src="images/gs1.webp" alt="" />
+                      <img src="images/gs.webp" alt="" />
                     </span>
                   </article>
                   <article class="style2" style="flex: 1 1 calc(33.333% - 20px);">
