--- a/src/grounding-bed.template.html
+++ b/src/grounding-bed.template.html
@@ -65,7 +65,7 @@
                     </span>
                 
                     <div class="right-text">
-                        <h3>Blue Light Glasses</h3>
+                        <h3>Grounding bed sheet</h3>
                         <h2></div>
                 </div>
             </section>
