--- a/src/grounding-mat.template.html
+++ b/src/grounding-mat.template.html
@@ -97,9 +97,7 @@
   <article class="style-text" style="flex: 1 1 calc(33.333% - 20px); display: flex; align-items: center; justify-content: center; background-color: #f4f4f4; padding: 20px; text-align: center;">
     <div>
       <h3 style="margin-bottom: 10px; font-size: 20px;">Ground Yourself. Reclaim Your Charge.</h3>
-      <p style="font-size: 16px; color: #333;">
-        Crafted from high-grade conductive PU, this versatile grounding mat neutralizes EMF chaos and restores your natural frequency—whether underfoot, at your desk, in bed, or during spiritual practice.
-      </p>
+      <p style="font-size: 16px; color: #333;">Crafted from high-grade conductive PU, this versatile grounding mat neutralizes EMF chaos and restores your natural frequency—whether underfoot, at your desk, in bed, or during spiritual practice.</p>
     </div>
   </article>
   <article class="style1" style="flex: 1 1 calc(33.333% - 20px);">
