--- a/src/new-arrivals.template.html
+++ b/src/new-arrivals.template.html
@@ -75,7 +75,7 @@
             <div class="shop-divider"></div>
           
             <div class="products-container">
-              <div class="harmonized-container"></div>
+              <div class="harmonized-container">
 
       
                   <div class="divider-1"></div>
