--- a/src/index.template.html
+++ b/src/index.template.html
@@ -197,7 +197,7 @@
       <!-- Featured Section -->
       <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
         <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Products</h2>
-        <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Products</button>
+        <button class="view-all-button" onclick="location.href='new-arrivals.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Products</button>
       </div>
 
   <!-- Tiles Section -->
